Change lease component
